--- a/Jt76.Ui/appsettings.json
+++ b/Jt76.Ui/appsettings.json
@@ -4,6 +4,8 @@
     "ApplicationConnection": "Server=(local);Database=Jt76.Application;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
 
+  //"STSKey": "x%u<-Q.@w^:qF]2Hz4",
+
   // LogLevel Severity: "Trace", "Debug", "Information", "Warning", "Error", "Critical", "None"
   "Logging": {
     "PathFormat": "Logs/log-{Date}.log",
