--- a/Jt76.WebApi/appsettings.Development.json
+++ b/Jt76.WebApi/appsettings.Development.json
@@ -1,7 +1,9 @@
 ﻿{
   "ConnectionStrings": {
-    "IdentityConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Jt76.Identity;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "ApplicationConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Jt76.Application;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "IdentityConnection":
+      "Server=(localdb)\\MSSQLLocalDB;Database=Jt76.Identity;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "ApplicationConnection":
+      "Server=(localdb)\\MSSQLLocalDB;Database=Jt76.Application;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   //"STSKey": "x%u<-Q.@w^:qF]2Hz4",
   "ApplicationSettings": {
