Added new Angular Cli integrated Core Project

--- a/Jt76.WebApi/Properties/launchSettings.json
+++ b/Jt76.WebApi/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/v1/weatherdata/openweatherforecasts",
+      "launchUrl": "api/v1/error",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -19,7 +19,7 @@
     "Jt76Base.WebApi": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/v1/weatherdata/openweatherforecasts",
+      "launchUrl": "api/v1/error",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
