--- a/Jt76.Ui/Jt76.Ui.csproj
+++ b/Jt76.Ui/Jt76.Ui.csproj
@@ -31,6 +31,12 @@
     <ProjectReference Include="..\Jt76.Common\Jt76.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ClientApp\src\app\modules\admin\services\" />
+    <Folder Include="ClientApp\src\app\modules\weather\services\" />
+    <Folder Include="ClientApp\src\assets\plugins\" />
+  </ItemGroup>
+
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
