Brought in api routing and errors displays

--- a/Jt76.Ui/Jt76.Ui.csproj
+++ b/Jt76.Ui/Jt76.Ui.csproj
@@ -32,6 +32,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="ClientApp\src\app\app-api-interceptor\" />
     <Folder Include="ClientApp\src\app\modules\admin\services\" />
     <Folder Include="ClientApp\src\app\modules\weather\services\" />
   </ItemGroup>
