Added new errorAsHtml endpoint for single error display

--- a/Jt76.Ui/Jt76.Ui.csproj
+++ b/Jt76.Ui/Jt76.Ui.csproj
@@ -29,10 +29,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Jt76.Common\Jt76.Common.csproj" />
+    <ProjectReference Include="..\Jt76.Data\Jt76.Data.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="ClientApp\src\app\app-api-interceptor\" />
     <Folder Include="ClientApp\src\app\modules\admin\services\" />
     <Folder Include="ClientApp\src\app\modules\weather\services\" />
   </ItemGroup>
