--- a/Jt76.WebApi/appsettings.json
+++ b/Jt76.WebApi/appsettings.json
@@ -1,13 +1,13 @@
 ﻿{
   "ConnectionStrings": {
     "IdentityConnection": "Server=(local);Database=Jt76.Identity;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "ApplicationConnection":
-      "Server=(local);Database=Jt76.Application;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ApplicationConnection": "Server=(local);Database=Jt76.Application;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   //"STSKey": "x%u<-Q.@w^:qF]2Hz4",
   "ApplicationSettings": {
     "Name": "Angular5 .Net Core Base Production Project"
   },
+  "SharedApplicationLocation":  "..\\Jt76.Ui\\bin\\Release\\netcoreapp2.0\\",
   "EmailSettings": {
     "EmailAddress": "testemailguidhere@gmail.com",
     "EmailPassword": "completely-public",
