--- a/Jt76.Ui/ClientApp/package.json
+++ b/Jt76.Ui/ClientApp/package.json
@@ -33,6 +33,7 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "ngx-webstorage": "^2.0.1",
     "popper.js": "^1.12.9",
     "rxjs": "^5.5.6",
     "web-animations-js": "^2.3.1",
