--- a/Jt76.Ui/ClientApp/package.json
+++ b/Jt76.Ui/ClientApp/package.json
@@ -37,6 +37,7 @@
     "ngx-webstorage": "^2.0.1",
     "popper.js": "^1.12.9",
     "rxjs": "^5.5.6",
+    "skycons": "^1.0.0",
     "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.19"
   },
