Implemented a base data component class, to share an interface for all data related components

--- a/Jt76.Ui/Jt76.Ui.csproj
+++ b/Jt76.Ui/Jt76.Ui.csproj
@@ -33,6 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="ClientApp\src\app\modules\weather\abstract\" />
     <Folder Include="ClientApp\src\app\modules\weather\services\" />
   </ItemGroup>
 
