--- a/Jt76.Ui/ClientApp/package.json
+++ b/Jt76.Ui/ClientApp/package.json
@@ -29,6 +29,7 @@
     "@ngrx/store": "^4.0.0",
     "@types/node": "^6.0.96",
     "bootstrap": "^4.0.0",
+    "chart.js": "^2.7.2",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
@@ -45,6 +46,7 @@
     "@angular/cli": "^1.6.5",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
+    "@types/chartjs": "0.0.31",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "codelyzer": "^4.0.1",
